--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,40 @@
+@import 'assets/scss/variables';
+
+* {
+	box-sizing: border-box;
+}
+
+html {
+	font-size: 10px;
+	height: 100%;
+	width: 100%;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.container {
+	width: 100%;
+	max-width: 75rem;
+	padding: 0 2rem;
+	margin: 0 auto;
+
+  @include  media-lg {
+		max-width: 100%;
+	}
+
+  @include  media-xl {
+    max-width: 135rem;
+  }
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .logo {
@@ -11,9 +43,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +56,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -40,3 +75,8 @@
 .read-the-docs {
   color: #888;
 }
+
+@import 'assets/scss/components/btn';
+@import 'assets/scss/components/form';
+@import 'assets/scss/components/list';
+@import 'assets/scss/components/swal';
