--- a/src/App.scss
+++ b/src/App.scss
@@ -5,9 +5,9 @@
 }
 
 html {
-	font-size: 10px;
-	height: 100%;
 	width: 100%;
+	height: 100%;
+	font-size: 10px;
 }
 
 #root {
@@ -19,8 +19,8 @@ html {
 .container {
 	width: 100%;
 	max-width: 75rem;
-	padding: 0 2rem;
 	margin: 0 auto;
+	padding: 0 2rem;
 
   @include  media-lg {
 		max-width: 100%;
@@ -33,15 +33,15 @@ html {
 
 .main {
   display: flex;
-  flex-direction: column;
   flex-grow: 1;
+  flex-direction: column;
 }
 
 .logo {
   height: 6em;
   padding: 1.5em;
-  will-change: filter;
   transition: filter 300ms;
+  will-change: filter;
 }
 
 .logo:hover {
@@ -68,12 +68,43 @@ html {
   }
 }
 
-.card {
-  padding: 2em;
+body {
+  box-sizing: border-box;
+  color: #282828;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-family: 'Scada', sans-serif;
 }
 
-.read-the-docs {
-  color: #888;
+.main-title {
+  margin-bottom: 1.8rem;
+  font-size: 2.4rem;
+  line-height: 3rem;
+  text-align: center;
+}
+
+.adding-box {
+  margin-top: 4rem;
+  margin-bottom: 3.2rem;
+  text-align: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.5s;
+
+  &.show {
+      opacity: 1;
+      pointer-events: all;
+  }
+}
+
+.title {
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 2.2rem;
+}
+
+hr {
+  border-bottom: 0.1rem solid rgba(40, 40, 40, 0.18);
 }
 
 @import 'assets/scss/components/btn';
