--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -1,37 +1,46 @@
 .btns {
+  @include media-sm {
+    flex-wrap: initial;
+  }
+
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-top: 41px;
-
-  @media screen and (max-width: 380px) {
-    flex-wrap: wrap;
-  }
 }
 
 .btn {
+  @include media-sm {
+    width: auto;
+  }
+
   display: inline-flex;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  min-width: 150px;
-  min-height: 40px;
-  border: 1px solid var(--mainColor);
+  width: 100%;
+  min-width: 15rem;
+  max-width: 26.8rem;
+  min-height: 4rem;
+  margin-right: auto;
+  margin-left: auto;
+  border: 0.1rem solid var(--mainColor);
   border-radius: 3px;
   background: var(--white);
-  font-size: 16px;
-  line-height: 20px;
+  outline: none;
+  font-size: 1.6rem;
+  line-height: 2rem;
   cursor: pointer;
   transition: 0.5s;
 
-  @media screen and (max-width: 380px) {
-    width: 100%;
-    max-width: 268px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-
   &:hover {
     color: var(--white);
+  }
+
+  &:hover,
+  &:active,
+  &:focus {
+    outline: none;
   }
 
   &-primary {
@@ -67,32 +76,40 @@
   }
 
   &-icon {
-    min-width: 50px;
-    margin-left: 10px;
+    min-width: 5rem;
+    margin-left: 1rem;
 
     svg {
-      width: 14px;
-      height: 14px;
+      width: 1.4rem;
+      height: 1.4rem;
       stroke: var(--white);
       transition: 0.5s;
     }
   }
 }
 
+
 .btn-cross {
   display: flex;
+  justify-content: center;
   align-items: center;
-  min-width: 32px;
-  margin-left: auto;
+  width: 1.4rem;
+  min-width: auto;
+  height: 1.4rem;
+  min-height: initial;
+  padding: 0;
+  border: none;
+  background: transparent;
+  cursor: pointer;
 
   svg {
-    width: 15px;
-    height: 15px;
+    width: 0.8rem;
+    height: 0.8rem;
     stroke: var(--danger);
     transition: 0.5s;
   }
 
   &:hover {
-    box-shadow: 0px 0px 4px rgba(40, 40, 40, 0.18);
+    box-shadow: 0 0 0.4rem rgba(40, 40, 40, 0.18);
   }
 }
