--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -29,20 +29,20 @@ input[type="checkbox"] {
       box-sizing: border-box;
       width: 12px;
       height: 12px;
-      border: 1px solid transparent;
+      border: 1px solid var(--mainColor);
       border-radius: 3px;
-      background: #b8b8b8;
+      background: var(--white);
     }
 
     &:after {
       content: "";
       position: absolute;
-      top: 7px;
-      left: 2px;
-      width: 6px;
-      height: 3px;
-      border-bottom: 2px solid var(--white);
-      border-left: 2px solid var(--white);
+      top: 4px;
+      left: 3px;
+      width: 12px;
+      height: 6px;
+      border-bottom: 1px solid var(--mainColor);
+      border-left: 1px solid var(--mainColor);
       opacity: 0;
       transition: 0.5s;
       transform: rotate(-45deg);
@@ -50,7 +50,6 @@ input[type="checkbox"] {
 
     &:hover {
       &:before {
-        background-color: var(--mainColor);
         box-shadow: -2px 0px 4px rgba(40, 40, 40, 0.18);
       }
     }
@@ -59,7 +58,6 @@ input[type="checkbox"] {
   &:active, &:checked {
     &+span {
       &:before {
-        background-color: var(--mainColor);
         box-shadow: none;
       }
 
