--- a/src/App.scss
+++ b/src/App.scss
@@ -83,20 +83,6 @@ body {
   text-align: center;
 }
 
-.adding-box {
-  margin-top: 4rem;
-  margin-bottom: 3.2rem;
-  text-align: center;
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.5s;
-
-  &.show {
-      opacity: 1;
-      pointer-events: all;
-  }
-}
-
 .title {
   font-weight: 700;
   font-size: 1.8rem;
@@ -105,6 +91,15 @@ body {
 
 hr {
   border-bottom: 0.1rem solid rgba(40, 40, 40, 0.18);
+}
+
+.error {
+  max-width: 268px;
+  margin: 0 auto;
+  padding-top: 5px;
+  color: red;
+  font-size: 12px;
+  text-align: left;
 }
 
 @import 'assets/scss/components/btn';
