--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -7,6 +7,7 @@
   --warningHover: #ffca2c;
   --warningBorder: #ffc720;
   --danger: #BF1B1B;
+  --dangerHover: #9e0b0b;
   --white: #fff;
   --black: #000;
   --lightBlack: #282828;
